Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I6ae0fec262e838110a867b3555a61f1d577482af

--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -1403,7 +1403,7 @@
     <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"የሥራ የይለፍ ቃል ያቀናብሩ"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"ፒን ያቀናብሩ"</string>
     <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"የሥራ ፒን ያቀናብሩ"</string>
-    <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"ስርዓተ-ጥለት ያቀናብሩ"</string>
+    <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"ሥርዓተ-ጥለት ያቀናብሩ"</string>
     <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"ለተጨማሪ ደህንነት ሲባል መሣሪያውን ለመክፈት ስርዓተ ጥለት ያቀናብሩ"</string>
     <string name="lockpassword_choose_your_profile_pattern_header" msgid="3101811498330756641">"የሥራ ስርዓተ-ጥለት ያቀናብሩ"</string>
     <string name="lockpassword_choose_your_password_header_for_fingerprint" msgid="3167261267229254090">"የጣት አሻራን ለመጠቀም የይለፍ ቃል ያቀናብሩ"</string>
