--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -1420,7 +1420,7 @@
     <string name="lockpassword_confirm_your_work_pin_header" msgid="4229765521391960255">"आफ्नो कार्य प्रोफाइलको PIN हाल्नुहोस्"</string>
     <string name="lockpassword_confirm_passwords_dont_match" msgid="2100071354970605232">"पासवर्ड मिलेन"</string>
     <string name="lockpassword_confirm_pins_dont_match" msgid="1103699575489401030">"PIN मिलेन"</string>
-    <string name="lockpassword_draw_your_pattern_again_header" msgid="1045638030120803622">"प्याटर्न फेरि कोर्नुहोस्"</string>
+    <string name="lockpassword_draw_your_pattern_again_header" msgid="1045638030120803622">"फेरि प्याटर्न हाल्नुहोस्"</string>
     <string name="lockpassword_choose_lock_generic_header" msgid="5669348379247148696">"चयन अनलक गर्नुहोस्"</string>
     <string name="lockpassword_password_set_toast" msgid="6615759749393973795">"पासवर्ड सेट भएको छ"</string>
     <string name="lockpassword_pin_set_toast" msgid="5415783847198570890">"PIN सेट भएको छ।"</string>
