--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -508,7 +508,7 @@
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"ଯଦି ଆପଣ ଆପଣଙ୍କ ସ୍କ୍ରିନ ଲକ ଭୁଲି ଯାଆନ୍ତି, ଆପଣଙ୍କ IT ଆଡମିନ ତାହା ରିସେଟ କରିପାରିବେ ନାହିଁ।"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"ଏକ ଅଲଗା ୱାର୍କ ଲକ ସେଟ କର"</string>
     <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"ଆପଣ ଏହି ଲକଟି ଭୁଲିଗଲେ, ଏହାକୁ ରିସେଟ କରିବାକୁ ଆପଣଙ୍କ IT ଆଡମିନଙ୍କୁ କୁହନ୍ତୁ"</string>
-    <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"ସ୍କ୍ରିନ୍‌ ଲକ୍‌ ବିକଳ୍ପ"</string>
+    <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"ସ୍କ୍ରିନ ଲକ ବିକଳ୍ପ"</string>
     <string name="setup_lock_settings_options_dialog_title" msgid="7985107300517468569">"ସ୍କ୍ରିନ ଲକ ବିକଳ୍ପ"</string>
     <string name="lock_screen_auto_pin_confirm_title" msgid="3012128112186088375">"ଅନଲକକୁ ସ୍ୱତଃ-ସୁନିଶ୍ଚିତ କରନ୍ତୁ"</string>
     <string name="lock_screen_auto_pin_confirm_summary" msgid="9050818870806580819">"ଯଦି ଆପଣ 6 କିମ୍ବା ଅଧିକ ଅଙ୍କର ଏକ ସଠିକ PIN ଇନପୁଟ କରନ୍ତି ତେବେ ସ୍ୱତଃ ଅନଲକ କରନ୍ତୁ। ସୁନିଶ୍ଚିତ କରିବା ପାଇଁ Enter ଟାପ କରିବାଠାରୁ ଏହା ସାମାନ୍ୟ କମ ସୁରକ୍ଷିତ ଅଟେ।"</string>
