--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -2757,7 +2757,7 @@
     <string name="extreme_threats_summary" msgid="3560742429496902008">"Riasztások extrém károkkal járó veszélyekről"</string>
     <string name="severe_threats_title" msgid="8962959394373974324">"Komoly veszélyek"</string>
     <string name="severe_threats_summary" msgid="4982256198071601484">"Riasztások komoly károkkal járó veszélyekről"</string>
-    <string name="amber_alerts_title" msgid="5238275758191804575">"NARANCS riasztás"</string>
+    <string name="amber_alerts_title" msgid="5238275758191804575">"AMBER-riasztások"</string>
     <string name="amber_alerts_summary" msgid="5755221775246075883">"Közlemények kérése elrabolt gyerekekről"</string>
     <string name="repeat_title" msgid="8676570486899483606">"Ismétlés"</string>
     <string name="call_manager_enable_title" msgid="1214301265395158720">"Híváskezelő engedélyezése"</string>
@@ -2765,7 +2765,7 @@
     <string name="call_manager_title" msgid="3397433159509629466">"Híváskezelő"</string>
     <!-- no translation found for call_manager_summary (2558839230880919191) -->
     <skip />
-    <string name="cell_broadcast_settings" msgid="2416980110093867199">"Vezeték nélküli vészjelzések"</string>
+    <string name="cell_broadcast_settings" msgid="2416980110093867199">"Vezeték nélküli riasztások"</string>
     <string name="network_operators_settings" msgid="5105453353329748954">"Mobilszolgáltatók"</string>
     <string name="access_point_names" msgid="5768430498022188057">"Hozzáférési pontok nevei"</string>
     <string name="enhanced_4g_lte_mode_title" msgid="6624700245232361149">"VoLTE"</string>
