--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -349,7 +349,7 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_title_2" msgid="2580899232734177771">"हे कसे काम करते"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_2" msgid="5909924864816776516">"ते तुम्हीच आहात याची पडताळणी करण्यासाठी फिंगरप्रिंट अनलॉक तुमच्या फिंगरप्रिंटचे युनिक मॉडेल तयार करते. सेटअपदरम्यान हे फिंगरप्रिंट मॉडेल तयार करण्यासाठी, तुम्ही तुमच्या फिंगरप्रिंटच्या वेगवेगळ्या स्थितीमधील इमेज घ्याल."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_2" msgid="3493356605815124807">"फिंगरप्रिंट अनलॉक हे तुमच्या लहान मुलाची, ते तेच आहेत याची पडताळणी करण्यासाठी तुमच्या लहान मुलाच्या फिंगरप्रिंटचे युनिक मॉडेल तयार करते. सेटअपदरम्यान हे फिंगरप्रिंट मॉडेल तयार करण्यासाठी, ते त्यांच्या फिंगरप्रिंटच्या वेगवेगळ्या स्थितीमधील इमेज घेतील."</string>
-    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"सर्वोत्तम परिणामांसाठी, Google साठी बनवलेले प्रमाणित असलेले स्क्रीन प्रोटेक्टर वापरा. इतर स्क्रीन प्रोटेक्‍टरसह, तुमचे फिंगरप्रिंट कदाचित काम करणार नाही."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"सर्वोत्तम परिणामांसाठी, Google साठी बनवलेले प्रमाणित स्क्रीन प्रोटेक्टर वापरा. इतर स्क्रीन प्रोटेक्‍टरसह, तुमची फिंगरप्रिंट कदाचित काम करणार नाही."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"सर्वोत्तम परिणामांसाठी, Google साठी बनवलेले प्रमाणित असलेले स्क्रीन प्रोटेक्टर वापरा. इतर स्क्रीन प्रोटेक्‍टरसह, तुमच्या लहान मुलाचे फिंगरप्रिंट कदाचित काम करणार नाही."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"वॉच अनलॉक"</string>
@@ -1468,7 +1468,7 @@
     <string name="lockpattern_recording_inprogress" msgid="7268008332694009191">"पूर्ण झाल्यावर बोट सोडा"</string>
     <string name="lockpattern_recording_incorrect_too_short" msgid="3351522018450593723">"कमीत कमी <xliff:g id="NUMBER">%d</xliff:g> बिंदू कनेक्ट करा. पुन्हा प्रयत्न करा."</string>
     <string name="lockpattern_pattern_entered_header" msgid="7709618312713127249">"पॅटर्न रेकॉर्ड झाला"</string>
-    <string name="lockpattern_need_to_confirm" msgid="6489499109451714360">"खात्री करण्यासाठी पॅटर्न पुन्हा एकदा काढा"</string>
+    <string name="lockpattern_need_to_confirm" msgid="6489499109451714360">"कन्फर्म करण्यासाठी पॅटर्न पुन्हा काढा"</string>
     <string name="lockpattern_pattern_confirmed_header" msgid="2969990617475456153">"तुमचा नवीन अनलॉक पॅटर्न"</string>
     <string name="lockpattern_confirm_button_text" msgid="6122815520373044089">"कन्फर्म करा"</string>
     <string name="lockpattern_restart_button_text" msgid="255339375151895998">"पुन्हा रेखाटा"</string>
