--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -4909,7 +4909,7 @@
     <string name="all_apps" msgid="3054120149509114789">"Vse aplikacije"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"Ne dovoli"</string>
     <string name="uwb_settings_title" msgid="8578498712312002231">"Izjemno širok pas (UWB)"</string>
-    <string name="uwb_settings_summary" msgid="3074271396764672268">"Pomaga določiti relativni položaj naprav v bližini, ki imajo UWB."</string>
+    <string name="uwb_settings_summary" msgid="3074271396764672268">"Pomaga določiti relativni položaj naprav v bližini, ki imajo UWB"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Če želite uporabljati UWB, izklopite način za letalo."</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"Na trenutni lokaciji UWB ni na voljo."</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
