--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -378,7 +378,7 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_title_2" msgid="2580899232734177771">"ఇది ఎలా పని చేస్తుంది"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_2" msgid="5909924864816776516">"\"వేలిముద్ర అన్‌లాక్\" అన్నది మీ వేలిముద్రకు సంబంధించి ఒక ప్రత్యేకమైన మోడల్‌ను క్రియేట్ చేస్తుంది. ఫోన్‌ను అన్‌లాక్‌ చేస్తోంది మీరేనని వెరిఫై చేయడానికి ఈ మోడల్‌ ఉపయోగించబడుతుంది. ఫోన్‌ను సెటప్ చేసే సమయంలో ఈ వేలిముద్ర మోడల్‌ను క్రియేట్ చేయడానికి, మీరు మీ వేలిముద్ర ఇమేజ్‌లను విభిన్న స్థానాల నుండి తీసుకుంటారు."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_2" msgid="3493356605815124807">"అది వారేనని వెరిఫై చేయడానికి, వేలిముద్ర అన్‌లాక్ మీ చిన్నారి వేలిముద్ర ప్రత్యేకమైన మోడల్‌ను క్రియేట్ చేస్తుంది. సెటప్ సమయంలో ఈ వేలిముద్ర మోడల్‌ను క్రియేట్ చేయడానికి, వారి వేలిముద్ర తాలూకు ఇమేజ్‌లను వారు వివిధ స్థానాల నుండి తీసుకుంటారు."</string>
-    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ఉత్తమ ఫలితాల కోసం, Google చేత సర్టిఫైడ్ చేయబడి తయారు చేయబడిన స్క్రీన్ ప్రొటెక్టర్‌ను ఉపయోగించండి. ఇతర స్క్రీన్ ప్రొటెక్టర్‌లతో, మీ వేలిముద్ర పని చేయకపోవచ్చు."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ఉత్తమ ఫలితాల కోసం, \'Google కోసం తయారు చేసినది\'గా సర్టిఫికెట్ పొందిన స్క్రీన్ ప్రొటెక్టర్‌ను ఉపయోగించండి. ఇతర స్క్రీన్ ప్రొటెక్టర్‌లతో, మీ వేలిముద్ర పని చేయకపోవచ్చు."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"ఉత్తమ ఫలితాల కోసం, Google చేత సర్టిఫైడ్ చేయబడి తయారు చేయబడిన స్క్రీన్ ప్రొటెక్టర్‌ను ఉపయోగించండి. ఇతర స్క్రీన్ ప్రొటెక్టర్‌లతో, మీ పిల్లల వేలిముద్ర పని చేయకపోవచ్చు."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"వాచ్ అన్‌లాక్"</string>
@@ -461,7 +461,7 @@
     <string name="security_settings_udfps_enroll_find_sensor_title" msgid="8077484429913330179">"మీ వేలిముద్రను ఎలా సెటప్ చేయాలి"</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message" msgid="6160543980992596286">"ఇది మీ ఫోన్ వెనుక భాగంలో ఉంది. మీ చూపుడు వేలిని ఉపయోగించండి."</string>
     <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"మీ స్క్రీన్ మీద వేలిముద్ర సెన్సార్ ఉంది. తదుపరి స్క్రీన్‌లో మీ వేలిముద్రను క్యాప్చర్ చేస్తారు."</string>
-    <string name="security_settings_udfps_enroll_find_sensor_start_button" msgid="3172268783620336357">"మొదలెట్టు"</string>
+    <string name="security_settings_udfps_enroll_find_sensor_start_button" msgid="3172268783620336357">"స్టార్ట్‌"</string>
     <string name="security_settings_udfps_enroll_a11y" msgid="1899453114050362235">"సెన్సార్‌ను కనుగొనడానికి, స్క్రీన్ అంతటా వేలిని జరపండి. వేలిముద్ర సెన్సార్‌ను తాకి &amp; నొక్కి ఉంచండి."</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_content_description" msgid="3065850549419750523">"పరికరం మరియు వేలిముద్ర సెన్సార్ లొకేషన్‌తో చిత్రపటం"</string>
     <string name="security_settings_fingerprint_enroll_dialog_name_label" msgid="7298812463228440333">"పేరు"</string>
